# juggernaut

./: .travis.yml  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  README.md
demo/: index.html  loader.js
demo/dataset/: 1.csv  2.csv  4.csv  5.csv  6.csv  iris.csv
demo/static/: bundle.js
demo/wasm/: juggernaut_iris-7fc8377652b13186.js  juggernaut_iris-7fc8377652b13186.wasm  juggernaut_iris-7fc8377652b13186.wasm.map  juggernaut_iris-c1d4446fddb02c61.js  juggernaut_iris-c1d4446fddb02c61.wasm  juggernaut_iris-c1d4446fddb02c61.wasm.map  libassert_approx_eq-ad809e17dbbe525f.rlib  libcsv-8c75c9bd859ad5a6.rlib  libcsv_core-4c192037b0b23320.rlib  libdtoa-2378036206a181b3.rlib  libeither-3985f28dfa7d379e.rlib  libitertools-f47443d41edd659c.rlib  libitoa-3a53e882a26ef3d0.rlib  libjuggernaut-93d847e28f076341.rlib  libjuggernaut-edbfaf162fea5295.rlib  liblibc-92e5e6191c7d0983.rlib  libmemchr-2c9a6e86a88ed97e.rlib  libnum_traits-c4210385fbd36655.rlib  librand-73eb5a5b090aa20c.rlib
example/juggernaut-demo/: Cargo.toml
example/juggernaut-demo/src/: main.rs
examples/: demo.rs  helloworld.rs  iris.rs
src/: activation.rs  lib.rs  math.rs  matrix.rs  nl.rs  nn.rs  sample.rs  utils.rs
src/activation/: hyperbolictangent.rs  identity.rs  leakyrectifiedlinearunit.rs  mod.rs  rectifiedlinearunit.rs  sigmoid.rs  softmax.rs  softplus.rs
src/cost/: cross_entropy.rs  mod.rs  squared_error.rs
