[package]
name = "juggernaut"
version = "0.3.0"
authors = ["Afshin Mehrabani <afshin.meh@gmail.com>"]
description = "Neural Network in Rust"
license = "GPL-3.0"

[dependencies]
assert_approx_eq = "1.0.0"
rand = "0.3.15"

[dev-dependencies]
serde = "1.0.10"
csv = "1.0.0-beta.4"
serde_derive = "1.0.10"
